--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        server-dir: /home/u909643426/domains/ceylonovatours.com/public_html/
+        server-dir: /domains/ceylonovatours.com/public_html/
         exclude: |
           **/.git*
           **/.git*/**
